--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -16251,139 +16251,102 @@
             document.getElementById('sampleScheduleModal').style.display = 'none';
         }
 
-        // 샘플 스케줄 목록 로드
-        async function loadSampleScheduleList() {
-            const listContainer = document.getElementById('sampleScheduleList');
-            listContainer.innerHTML = '<div style="text-align: center; color: #999; padding: 20px;">로딩 중...</div>';
+        // 샘플 스케줄 목록 로드 (localStorage 기반)
+        const DJ_SAMPLE_SCHEDULES_KEY = 'DJ_sample_schedules';
 
+        function getSampleSchedules() {
             try {
-                const response = await fetch(`${GOOGLE_SHEET_URL}?action=getSampleSchedules`);
-                const result = await response.json();
-
-                if (result.success && result.samples && result.samples.length > 0) {
-                    listContainer.innerHTML = result.samples.map(sample => `
-                        <div style="display: flex; justify-content: space-between; align-items: center; padding: 12px; background: white; border: 1px solid #e5e5e5; border-radius: 8px; margin-bottom: 8px;">
-                            <div style="flex: 1;">
-                                <div style="font-weight: 600; color: #333; margin-bottom: 4px;">${sample.title}</div>
-                                <div style="font-size: 11px; color: #999;">📅 ${sample.createdAt} | 👤 ${sample.createdBy || '-'}</div>
-                            </div>
-                            <div style="display: flex; gap: 6px;">
-                                <button onclick="loadSampleSchedule('${sample.id}')" 
-                                    style="background: #007aff; color: white; border: none; padding: 6px 12px; border-radius: 6px; font-size: 12px; cursor: pointer;">불러오기</button>
-                                <button onclick="deleteSampleSchedule('${sample.id}', '${sample.title}')" 
-                                    style="background: #ff3b30; color: white; border: none; padding: 6px 10px; border-radius: 6px; font-size: 12px; cursor: pointer;">✕</button>
-                            </div>
-                        </div>
-                    `).join('');
-                } else {
-                    listContainer.innerHTML = '<div style="text-align: center; color: #999; padding: 20px;">저장된 샘플이 없습니다</div>';
-                }
-            } catch (error) {
-                console.error('샘플 목록 로드 실패:', error);
-                listContainer.innerHTML = '<div style="text-align: center; color: #ff3b30; padding: 20px;">목록을 불러오지 못했습니다</div>';
+                const data = localStorage.getItem(DJ_SAMPLE_SCHEDULES_KEY);
+                return data ? JSON.parse(data) : [];
+            } catch (e) {
+                console.error('샘플 데이터 파싱 오류:', e);
+                return [];
             }
         }
 
-        // 현재 스케줄을 샘플로 저장
-        async function saveSampleSchedule() {
+        function setSampleSchedules(samples) {
+            localStorage.setItem(DJ_SAMPLE_SCHEDULES_KEY, JSON.stringify(samples));
+        }
+
+        function loadSampleScheduleList() {
+            const listContainer = document.getElementById('sampleScheduleList');
+            const samples = getSampleSchedules();
+
+            if (samples.length > 0) {
+                listContainer.innerHTML = samples.map((sample, idx) => `
+                    <div style="display: flex; justify-content: space-between; align-items: center; padding: 12px; background: white; border: 1px solid #e5e5e5; border-radius: 8px; margin-bottom: 8px;">
+                        <div style="flex: 1;">
+                            <div style="font-weight: 600; color: #333; margin-bottom: 4px;">${sample.title}</div>
+                            <div style="font-size: 11px; color: #999;">📅 ${sample.createdAt ? new Date(sample.createdAt).toLocaleDateString('ko-KR') : '-'} | 👤 ${sample.createdBy || '-'} | ${sample.scheduleData?.length || 0}개 공정</div>
+                        </div>
+                        <div style="display: flex; gap: 6px;">
+                            <button onclick="loadSampleSchedule(${idx})" 
+                                style="background: #007aff; color: white; border: none; padding: 6px 12px; border-radius: 6px; font-size: 12px; cursor: pointer;">불러오기</button>
+                            <button onclick="deleteSampleSchedule(${idx}, '${sample.title.replace(/'/g, "\\'")}')" 
+                                style="background: #ff3b30; color: white; border: none; padding: 6px 10px; border-radius: 6px; font-size: 12px; cursor: pointer;">✕</button>
+                        </div>
+                    </div>
+                `).join('');
+            } else {
+                listContainer.innerHTML = '<div style="text-align: center; color: #999; padding: 20px;">저장된 샘플이 없습니다</div>';
+            }
+        }
+
+        // 현재 스케줄을 샘플로 저장 (localStorage)
+        function saveSampleSchedule() {
             const title = document.getElementById('sampleScheduleTitle').value.trim();
             if (!title) {
                 showToast('샘플 제목을 입력하세요', 'error');
                 return;
             }
 
-            // 현재 스케줄 데이터가 없는 경우 경고
             if (!scheduleRows || scheduleRows.length === 0) {
                 showToast('저장할 스케줄 데이터가 없습니다', 'error');
                 return;
             }
 
-            const sampleData = {
-                action: 'saveSampleSchedule',
+            const samples = getSampleSchedules();
+            samples.push({
                 title: title,
-                scheduleData: scheduleRows, // 현재 스케줄 데이터
+                scheduleData: JSON.parse(JSON.stringify(scheduleRows)),
                 createdBy: currentAdmin?.id || 'unknown',
                 createdAt: new Date().toISOString()
-            };
+            });
+            setSampleSchedules(samples);
 
-            try {
-                showToast('저장 중...', 'info');
-                const response = await fetch(GOOGLE_SHEET_URL, {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'text/plain' },
-                    body: JSON.stringify(sampleData)
-                });
-                const result = await response.json();
-
-                if (result.success) {
-                    showToast(`샘플 "${title}" 저장 완료!`, 'success');
-                    document.getElementById('sampleScheduleTitle').value = '';
-                    loadSampleScheduleList();
-                } else {
-                    showToast('저장 실패: ' + (result.message || '알 수 없는 오류'), 'error');
-                }
-            } catch (error) {
-                console.error('샘플 저장 실패:', error);
-                showToast('저장 중 오류가 발생했습니다', 'error');
-            }
+            showToast(`샘플 "${title}" 저장 완료!`, 'success');
+            document.getElementById('sampleScheduleTitle').value = '';
+            loadSampleScheduleList();
         }
 
-        // 샘플 스케줄 불러오기
-        async function loadSampleSchedule(sampleId) {
+        // 샘플 스케줄 불러오기 (localStorage)
+        function loadSampleSchedule(sampleIdx) {
             if (!confirm('현재 스케줄이 모두 삭제되고 선택한 샘플로 대체됩니다. 계속하시겠습니까?')) return;
 
-            try {
-                showToast('불러오는 중...', 'info');
-                const response = await fetch(`${GOOGLE_SHEET_URL}?action=getSampleSchedule&id=${sampleId}`);
-                const result = await response.json();
+            const samples = getSampleSchedules();
+            const sample = samples[sampleIdx];
 
-                if (result.success && result.sample) {
-                    const sample = result.sample;
-
-                    if (sample.scheduleData && Array.isArray(sample.scheduleData)) {
-                        scheduleRows = sample.scheduleData; // 스케줄 데이터 교체
-                        renderScheduleTable(); // 테이블 다시 렌더링
-                        saveScheduleToCustomer(); // 고객 데이터에 자동 저장
-
-                        closeSampleScheduleModal();
-                        showToast(`샘플 "${sample.title}" 적용 완료!`, 'success');
-                    } else {
-                        showToast('유효하지 않은 샘플 데이터입니다', 'error');
-                    }
-                } else {
-                    showToast('샘플을 불러올 수 없습니다', 'error');
-                }
-            } catch (error) {
-                console.error('샘플 불러오기 실패:', error);
-                showToast('불러오기 중 오류가 발생했습니다', 'error');
+            if (sample && sample.scheduleData && Array.isArray(sample.scheduleData)) {
+                scheduleRows = JSON.parse(JSON.stringify(sample.scheduleData));
+                renderScheduleTable();
+                saveScheduleToCustomer();
+                closeSampleScheduleModal();
+                showToast(`샘플 "${sample.title}" 적용 완료!`, 'success');
+            } else {
+                showToast('유효하지 않은 샘플 데이터입니다', 'error');
             }
         }
 
-        // 샘플 스케줄 삭제
-        async function deleteSampleSchedule(sampleId, sampleTitle) {
+        // 샘플 스케줄 삭제 (localStorage)
+        function deleteSampleSchedule(sampleIdx, sampleTitle) {
             if (!confirm(`"${sampleTitle}" 샘플을 삭제하시겠습니까?`)) return;
 
-            try {
-                const response = await fetch(GOOGLE_SHEET_URL, {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'text/plain' },
-                    body: JSON.stringify({
-                        action: 'deleteSampleSchedule',
-                        id: sampleId
-                    })
-                });
-                const result = await response.json();
+            const samples = getSampleSchedules();
+            samples.splice(sampleIdx, 1);
+            setSampleSchedules(samples);
 
-                if (result.success) {
-                    showToast('샘플이 삭제되었습니다', 'success');
-                    loadSampleScheduleList();
-                } else {
-                    showToast('삭제 실패', 'error');
-                }
-            } catch (error) {
-                console.error('샘플 삭제 실패:', error);
-                showToast('삭제 중 오류가 발생했습니다', 'error');
-            }
+            showToast('샘플이 삭제되었습니다', 'success');
+            loadSampleScheduleList();
         }
 
         function importMasterSchedule() {
