Fix: Include project name in Notion export payload

--- a/adminwonpro_mobile.html
+++ b/adminwonpro_mobile.html
@@ -17727,6 +17727,7 @@
                         '착공일': startDateVal,
                         '준공일': endDateVal,
                         '잔금일': targetData.balanceDate || '',
+                        '공사명': targetData.projectName || '', // [추가] 공사명 전달
                         'A/S 기간': targetData.asEndDate || '',
                         '공사 유의사항': getScheduleGuidelinesText(),
                         'A/S 유의사항': getASGuidelinesText()
